bug fix for obscure covering links in expanded documentation view (#4)

--- a/docs/style.css
+++ b/docs/style.css
@@ -299,6 +299,7 @@ p {
     }
 
     .pageMain {
+        position: relative;
         width: 100%;
         max-width: 960px;
         margin-left: 320px;
